# django_coverage_plugin

./: .editorconfig  .gitignore  .isort.cfg  .travis.yml  AUTHORS.txt  HISTORY.rst  MANIFEST.in  Makefile  NOTICE.txt  README.rst  README.txt  howto.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
django_coverage_plugin/: __init__.py  plugin.py
django_template_coverage/: plugin.py
tests/: __init__.py  banner.py  conftest.py  plugin_test.py  test_engines.py  test_extends.py  test_flow.py  test_helpers.py  test_html.py  test_i18n.py  test_integration.py  test_settings.py  test_simple.py  test_source.py
